# Supplier-Compliance-System-

./: .env.example  .gitignore  LICENSE  Makefile  PAPER.md  README.md  pyproject.toml  requirements.txt
data/: ground_truth.json  seed_suppliers.json  supplier_profiles.json
data/news/: seed_corpus.json
data/reference/: bis_crs_sample.json  ofac_sdn_sample.json  wb_debarred_sample.json
data/results/: budget_sweep.csv
src/scs/: __init__.py  config.py  credibility.py  data.py  metrics_taxonomy.py  models.py  profile.py  service.py
src/scs/adversarial/: attack.py  runner.py
src/scs/compliance/: bis_crs.py  ofac.py  pipeline.py  world_bank.py
src/scs/dashboard/: app.py  charts.py  components.py  page_compare.py  page_detail.py  page_find.py  page_lab.py  page_method.py  page_onboard.py  page_overview.py  page_parameters.py  styling.py
src/scs/evaluation/: ground_truth.py  metrics.py  run_budget_sweep.py  run_experiment.py
src/scs/risk/: extractor.py  news.py  pipeline.py  prompts.py
src/scs/scoring/: defense.py  fusion.py  parameters.py  profile_signals.py
tests/: test_compliance.py  test_scoring.py
