[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scs"
version = "0.1.0"
description = "Supplier Compliance & Intelligent Recommendation System"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aakarsh Prabhu" }]
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
